fixed drop down menu spacing issue and added h1 for saved events

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a:visited {
 .search-form {
     margin: auto;
     width: 20%;
-    min-width: 250px;
+    min-width: 200px;
     padding: 6px;
 }
 .state-list {
